--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header class="text-center">
-    <h1>Acak Aja</h1>
+    <h1>Mending Diputerin Aja</h1>
   </header>
   <main>
     <ul class="menu">
