--- a/acak-angka/main/angka.html
+++ b/acak-angka/main/angka.html
@@ -28,6 +28,7 @@
       <button type="button" id="reset-btn">Reset</button>
     </form>
     <div id="results"></div>
+    <button type="button" id="save-btn">Unduh Hasil</button>
     <button type="button" onclick="window.location.href='../../index.html'">Kembali ke Index</button>
   </main>
   <script src="script-angka.js"></script>
