--- a/acak-kelompok/main/kelompok.html
+++ b/acak-kelompok/main/kelompok.html
@@ -15,6 +15,7 @@
     <button type="button" id="reset-btn">Reset</button>
     <textarea id="name-list" rows="5" placeholder="Masukkan nama peserta, setiap baris satu nama"></textarea>
   </div>
+  <button type="button" id="download-btn" style="display: none;">Download Hasil</button>
   <div id="result-container" class="result-container"></div>
   <a href="../../index.html">Kembali</a>
   <script src="script-kelompok.js"></script>
