--- a/acak-peran/main/peran.html
+++ b/acak-peran/main/peran.html
@@ -21,6 +21,7 @@
     <button id="add-position">Tambah Jabatan</button>
 
     <button id="randomize">Acak</button>
+    <button id="download-results">Download Hasil</button>
   </div>
 
   <div id="result-container"></div>
